--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
   "name": "algorithmia-chess-knight",
   "version": "1.0.0",
-  "description": "",
+  "description": "Solution for Chess Knight movements problem",
   "main": "index.js",
+  "engines": {
+    "node": "10.16.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test"
   },
   "repository": {
     "type": "git",
     "url": "git@gitlab.extranet.fluxit.com.ar:nearshore/algorithmia-chess-knight.git"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.2.0"
+  }
 }
